--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
       <section>
         <h2>AWS SNS</h2>
         <dl>
-          <dt>Notifications</dt>
+          <dt>Requests</dt>
           <dd>
             First 1 million requests per month are free, $0.50 per 1 million
             requests thereafter
